--- a/src/app/home/control-panel/user/bulk-import/bulk-import.component.html
+++ b/src/app/home/control-panel/user/bulk-import/bulk-import.component.html
@@ -16,8 +16,8 @@
     </div>
     <div class="user-list w-100 p-3">
         <div class="grid-container">
-            <div *nIf="!taskList || taskList.length == 0" class="alert alert-dark">No New Tasks Found</div>
-            <div *nIf="taskList && taskList.length > 0" class="list-group">
+            <div *ngIf="!taskList || taskList.length == 0" class="alert alert-dark">No New Tasks Found</div>
+            <div *ngIf="taskList && taskList.length > 0" class="list-group">
                 <div class="list-group-item list-group-item-action d-flex align-items-center justify-content-between hover"
                     *ngFor="let item of taskList" [routerLink]="item._id">
                     <div class="id">{{item._id}}</div>
@@ -37,6 +37,9 @@
             <label for="file">Select File</label>
             <input class="form-control-file" type="file" id="file" name="file" (change)="onChange($event)">
             <small *ngIf="fileAdded" class="form-text text-success">File Selected</small>
+            <div class="mt-3">
+                <a [href]="downloadUrl" download="data-stack-user.template.csv" target="_blank">Download Template</a>
+            </div>
         </div>
         <button type="button" class="btn btn-dark" (click)="startProcess()">Start Import Process</button>
     </form>
