--- a/src/app/home/control-panel/user/bulk-import-status/bulk-import-status.component.html
+++ b/src/app/home/control-panel/user/bulk-import-status/bulk-import-status.component.html
@@ -8,6 +8,7 @@
     <odp-breadcrumb [paths]="breadcrumbPaths"></odp-breadcrumb>
     <div class="options d-flex justify-content-between align-items-center w-100 border-bottom p-3">
         <div class="font-weight-bold font-lg">Report</div>
+        <div class="text-muted">Showing {{loadedCount}} of {{totalCount}}</div>
     </div>
     <div class="user-list w-100 px-3 pt-3">
         <div class="grid-container">
