--- a/src/app/home/control-panel/user/user.component.html
+++ b/src/app/home/control-panel/user/user.component.html
@@ -9,7 +9,8 @@
     <div class="options d-flex justify-content-between align-items-center w-100 border-bottom px-3">
         <div class="font-weight-bold font-lg">List of Users</div>
         <div class="btn-group">
-            <button *ngIf="hasPermission('PMUBC')" type="button" class="add-new btn-min-width btn btn-dark" routerLink="bulk-import">
+            <button *ngIf="hasPermission('PMUBC')" type="button" class="add-new btn-min-width btn btn-dark"
+                routerLink="bulk-import">
                 <span class="fa fa-upload mr-2"></span>
                 <span class="text">Bulk Import</span>
             </button>
@@ -86,7 +87,7 @@
     </div>
 </ng-template>
 
-<ng-template #newUserModal>
+<!-- <ng-template #newUserModal>
     <div class="modal-body px-4 py-3">
         <div class="d-flex align-items-center justify-content-between mb-3">
             <div class="d-flex align-items-center">
@@ -97,8 +98,9 @@
             </div>
             <span class="fa fa-times text-secondary hover" (click)="newUserModalRef.close(false)"></span>
         </div>
-        <form class="d-flex flex-column p-4" [formGroup]="userForm" (ngSubmit)="!userInLocal ? addUser() : importUser()"
-            odpFocusNext (trigger)="!userInLocal ? addUser() : importUser()">
+        <form class="d-flex flex-column p-4" [formGroup]="userForm"
+            (ngSubmit)="!userInLocal && !userInAzureAD ? addUser() : importUser()" odpFocusNext
+            (trigger)="!userInLocal && !userInAzureAD ? addUser() : importUser()">
             <div formGroupName="userData">
                 <div class="d-flex align-items-center w-100 mb-3" formGroupName="auth"
                     *ngIf="validAuthTypes?.length > 1">
@@ -142,7 +144,8 @@
                             ngbTooltip="Name can contain alphanumeric and  _ ,- , @ , # and . characters only"></span>
                     </div>
                 </div>
-                <ng-container *ngIf="!userInLocal && userForm.get('userData.auth.authType').value==='local'">
+                <ng-container
+                    *ngIf="!userInLocal && !userInAzureAD && userForm.get('userData.auth.authType').value==='local'">
                     <div class="d-flex align-items-center w-100 mb-3 position-relative">
                         <div class="label-width text-secondary">
                             Password
@@ -252,4 +255,166 @@
                 id="importUser" (click)="importUser()">Import</button>
         </div>
     </div>
-</ng-template>
+</ng-template> -->
+
+
+<div *ngIf="showNewUserWindow" class="overlay position-fixed"></div>
+<div [ngClass]="{'show':showNewUserWindow}" class="new-user-window position-fixed bg-white border-left">
+    <div class="d-flex align-items-center justify-content-between mb-3">
+        <div class="d-flex align-items-center">
+            <span class="icon-wrapper create rounded-circle d-flex align-items-center justify-content-center mr-2">
+                <odp-user-icon [size]="18" color="1CAD49" class="mt-1"></odp-user-icon>
+            </span>
+            <span class="font-weight-bold">Add User</span>
+        </div>
+        <span class="fa fa-times text-secondary hover" (click)="newUserModalRef.close(false)"></span>
+    </div>
+    <form class="d-flex flex-column p-4" [formGroup]="userForm" odpFocusNext>
+        <div formGroupName="userData">
+            <div class="d-flex align-items-center w-100 mb-3" formGroupName="auth" *ngIf="validAuthTypes?.length > 1">
+                <div class="label-width text-secondary">Authentication Method</div>
+                <div class="value-width position-relative w-100">
+                    <select class="form-control" formControlName="authType">
+                        <option *ngFor="let item of validAuthTypes" [value]="item.value">{{item.label}}</option>
+                    </select>
+                    <span class="fas fa-question-circle text-danger error-icon position-absolute"
+                        *ngIf="invalidAuthType" ngbTooltip="This is a required field" placement="right"></span>
+                </div>
+            </div>
+            <div class="d-flex align-items-center w-100 mb-3">
+                <div class="label-width text-secondary">
+                    Username
+                    <sup class="text-danger">*</sup>
+                </div>
+                <div class="value-width position-relative w-100">
+                    <input class="form-control" type="text" placeholder="Enter Username" formControlName="username"
+                        odpAutoFocus (blur)="checkForDuplicate()"
+                        [ngClass]="{'is-invalid': invalidUsername || invalidUsernamePattern}">
+                    <span class="fas fa-question-circle text-danger error-icon position-absolute"
+                        *ngIf="invalidUsername" ngbTooltip="This is a required field" placement="right"></span>
+                    <span class="fas fa-question-circle text-danger error-icon position-absolute"
+                        *ngIf="invalidUsernamePattern" ngbTooltip="Username must be of email format"
+                        placement="right"></span>
+                </div>
+            </div>
+            <div class="d-flex align-items-center w-100 mb-3">
+                <div class="label-width text-secondary">
+                    Name
+                    <sup class="text-danger">*</sup>
+                </div>
+                <div class="value-width position-relative w-100" formGroupName="basicDetails">
+                    <input class="form-control pr-4" type="text" placeholder="Enter Name" formControlName="name"
+                        [ngClass]="{'is-invalid': invalidName}" autocomplete="autocomplete_off_hack">
+                    <span class="fas fa-question-circle text-danger error-icon position-absolute" *ngIf="invalidName"
+                        ngbTooltip="This is a required field" placement="right"></span>
+                    <span *ngIf="userForm.get('userData.basicDetails.name').hasError('pattern')"
+                        class="text-danger position-absolute fa fa-exclamation-circle error-icon" container="body"
+                        ngbTooltip="Name can contain alphanumeric and  _ ,- , @ , # and . characters only"></span>
+                </div>
+            </div>
+            <ng-container
+                *ngIf="!userInLocal && !userInAzureAD && userForm.get('userData.auth.authType').value==='local'">
+                <div class="d-flex align-items-center w-100 mb-3 position-relative">
+                    <div class="label-width text-secondary">
+                        Password
+                        <sup class="text-danger">*</sup>
+                    </div>
+                    <div class="value-width position-relative w-100">
+                        <input class="form-control password-input" [type]="showPassword['new'] ? 'text' : 'password'"
+                            placeholder="Password" formControlName="password"
+                            [ngClass]="{'is-invalid': invalidPassword || invalidPasswordLength || invalidPasswordPattern }"
+                            autocomplete="new-password">
+                        <span class="fas fa-question-circle text-danger error-icon-password position-absolute"
+                            *ngIf="invalidPassword" ngbTooltip="This is a required field" placement="right"></span>
+                        <span class="fas fa-question-circle text-danger error-icon-password  position-absolute"
+                            *ngIf="invalidPasswordLength" ngbTooltip="Password should be minimum 8 chars long"
+                            placement="right"></span>
+                        <span class="fas fa-question-circle text-danger error-icon-password  position-absolute"
+                            *ngIf="invalidPasswordPattern"
+                            ngbTooltip="Password must have one of following - Uppercase(A - Z), Lowercase(a - z), Special characters (!@#$%^&*?~) and Numbers (0 - 9)"
+                            placement="right"></span>
+                    </div>
+                    <span class="fas eye-icon position-absolute hover"
+                        [ngClass]="{'fa-eye': !showPassword['new'],'fa-eye-slash': showPassword['new'] }"
+                        (click)="showPassword['new']= !showPassword['new']"></span>
+                </div>
+                <div class="d-flex align-items-center w-100 mb-3 position-relative">
+                    <div class="label-width text-secondary">
+                        Confirm Password
+                        <sup class="text-danger">*</sup>
+                    </div>
+                    <div class="value-width position-relative w-100">
+                        <input class="form-control password-input"
+                            [type]="showPassword['confirm'] ? 'text' : 'password'" placeholder="Confirm Password"
+                            formControlName="cpassword"
+                            [ngClass]="{'is-invalid': invalidCPassword || invalidPasswordMatch}">
+                        <span class="fas fa-question-circle text-danger error-icon-password  position-absolute"
+                            *ngIf="invalidCPassword" ngbTooltip="This is a required field" placement="right"></span>
+                        <span class="fas fa-question-circle text-danger error-icon-password  position-absolute"
+                            *ngIf="invalidPasswordMatch" ngbTooltip="Passwords do not match" placement="right"></span>
+                    </div>
+                    <span class="fas eye-icon position-absolute hover"
+                        [ngClass]="{'fa-eye': !showPassword['confirm'],'fa-eye-slash': showPassword['confirm'] }"
+                        (click)="showPassword['confirm']= !showPassword['confirm']"></span>
+                </div>
+            </ng-container>
+            <div class="d-flex align-items-center w-100 mb-3">
+                <div class="label-width text-secondary">Phone</div>
+                <div class="value-width position-relative w-100" formGroupName="basicDetails">
+                    <input class="form-control" type="text" placeholder="Enter Phone Number" formControlName="phone">
+                </div>
+            </div>
+            <div class="d-flex align-items-center w-100 mb-3">
+                <div class="label-width text-secondary">Alternate Email</div>
+                <div class="value-width position-relative w-100" formGroupName="basicDetails">
+                    <input class="form-control" type="text" placeholder="Enter Alternate Email"
+                        formControlName="alternateEmail">
+                    <span class="fas fa-question-circle text-danger error-icon position-absolute"
+                        *ngIf="invalidEmailPattern" ngbTooltip="Invalid Alternate Email" placement="right"></span>
+                </div>
+            </div>
+        </div>
+        <div *ngIf="hasPermission('PMUG') && teamsArray.length>0">
+            <div class="d-flex align-items-center w-100">
+                <div class="label-width text-secondary">Groups</div>
+                <div class="value-width position-relative w-100">
+                    <div class="d-flex flex-column position-relative">
+                        <div class="d-flex align-items-center hover user-option-class form-control ignore-outside"
+                            [ngClass]="{'open':displayTeamList}" (click)="displayTeamList = !displayTeamList"
+                            odpClickOutside (outside)="displayTeamList = false;" [ignore]="['.ignore-outside']">
+                            <span class="pr-2 w-100 ignore-outside">
+                                {{ selectedTeamSize > 0 ? selectedTeamSize + ' team(s) selected'
+                                : '--Select--'}}
+                            </span>
+                            <span class="fas fa-angle-down text-accent ignore-outside"></span>
+                        </div>
+                        <div *ngIf="displayTeamList" class="teamList border mt-2 position-absolute w-100 ignore-outside"
+                            [ngClass]="{'teamList-newHeight':!userInLocal}">
+                            <ul class="p-0 mb-0 ignore-outside" formArrayName="teamData">
+                                <li *ngFor="let team of teamsArray; index as teamIndex"
+                                    class="p-2 hover ignore-outside">
+                                    <label class="ignore-outside team-checkbox hover font-normal">
+                                        {{teamList[teamIndex].name}}
+                                        <input type="checkbox" class="mr-2 ignore-outside" [formControlName]="teamIndex"
+                                            (change)="checkTeamSize()">
+                                        <span class="team-selected ignore-outside"></span>
+                                    </label>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
+    <div class="d-flex align-items-center justify-content-end">
+        <button type="button" class="btn btn-link text-dark" id="cancelNewUserYes"
+            (click)="newUserModalRef.close(false)">Cancel</button>
+        <button *ngIf="!userInLocal && hasPermission('PMUBC')" type="button" class="btn btn-create btn-min-width"
+            id="createNewUserYes" (click)="addUser()" [disabled]="userForm.get('userData').invalid">Add</button>
+        <button *ngIf="userInLocal && hasPermission('PMUBC')" type="button" class="btn btn-dark btn-min-width"
+            id="importUser" (click)="importUser()">Import</button>
+        <button *ngIf="userInAzureAD && hasPermission('PMUBC')" type="button" class="btn btn-dark btn-min-width"
+            id="importUser" (click)="importUserFromAzure()">Import</button>
+    </div>
+</div>
