hidden html Input

--- a/src/app/home/control-panel/user/user.component.html
+++ b/src/app/home/control-panel/user/user.component.html
@@ -256,7 +256,7 @@
         </div>
     </div>
 </ng-template> -->
-
+<input type="text" id="azure-body" class="d-none">
 
 <div *ngIf="showNewUserWindow" class="overlay position-fixed"></div>
 <div [ngClass]="{'show':showNewUserWindow}" class="new-user-window position-fixed bg-white border-left">
