auth mode local in admin panel

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -77,17 +77,11 @@
       <span class="fa fa-users mr-2"></span>
       <span class="text">Users</span>
     </div>
-    <div #agentActive="routerLinkActive" class="d-flex align-items-center px-3 item hover" routerLinkActive="active"
+    <!-- <div #agentActive="routerLinkActive" class="d-flex align-items-center px-3 item hover" routerLinkActive="active"
       routerLink="integration">
-      <!-- <odp-agent-icon class="pt-1" [color]="agentActive.isActive ? 'FBA200':'FFF'" size="16"></odp-agent-icon> -->
       <span class="odp-flows"></span>
       <span class="text mt-1 ml-2">Integration</span>
-    </div>
-    <!-- Commenting for now
-    <div class="d-flex align-items-center px-3 item hover" routerLinkActive="active" routerLink="insights">
-      <span class="fa fa-align-left mr-2"></span>
-      <span class="text">Insights</span>
-    </div>-->
+    </div> -->
   </div>
   <div class="d-flex w-100 h-100">
     <div class="d-flex flex-column body w-100">
