--- a/src/app/admin/user-list/user-manage/user-info/user-info.component.html
+++ b/src/app/admin/user-list/user-manage/user-info/user-info.component.html
@@ -74,16 +74,7 @@
                 </div>
                 <div class="d-flex w-100 mb-3">
                     <label class="text-secondary label-width">Authentication Type</label>
-                    <span>
-                        {{
-                        user?.auth?.authType === 'local'
-                        ? 'Local' :(user?.auth?.authType === 'ldap'
-                        ? 'LDAP' : (user?.auth?.authType === 'azure'
-                        ? 'Azure' : 'Not Available'
-                        )
-                        )
-                        }}
-                    </span>
+                    <span> {{ user?.auth?.authType}} </span>
                 </div>
             </div>
         </div>
