--- a/src/app/home/control-panel/user/user.component.html
+++ b/src/app/home/control-panel/user/user.component.html
@@ -9,14 +9,14 @@
     <div class="options d-flex justify-content-between align-items-center w-100 border-bottom px-3">
         <div class="font-weight-bold font-lg">List of Users</div>
         <div class="btn-group">
-            <button *ngIf="hasPermission('PMUBC')" type="button" class="add-new btn-min-width btn btn-dark"
-                routerLink="bulk-import">
-                <span class="fa fa-upload mr-2"></span>
-                <span class="text">Bulk Import</span>
+            <button *ngIf="hasPermission('PMUBC')" type="button" class="add-new btn btn-dark"
+                routerLink="bulk-import" ngbTooltip="Bulk Import">
+                <span class="fa fa-upload"></span>
+                <!-- <span class="text">Bulk Import</span> -->
             </button>
             <button *ngIf="hasPermission('PMUBC')" type="button" class="add-new btn-min-width btn btn-primary"
                 (click)="newUser()">
-                <span class="fa fa-plus-circle mr-2"></span>
+                <span class="fa fa-user-plus mr-2"></span>
                 <span class="text">Add User</span>
             </button>
         </div>
@@ -281,7 +281,8 @@
                     ngbTooltip="This is a required field"></span>
             </div>
             <ng-container *ngIf="showAzureLoginButton">
-                <button type="button" class="mb-3 ng-star-inserted border bg-white d-flex align-items-center p-2" (click)="triggerAzureToken()">
+                <button type="button" class="mb-3 ng-star-inserted border bg-white d-flex align-items-center p-2"
+                    (click)="triggerAzureToken()">
                     <span class="azure-logo mr-2"></span>
                     <span>Login to Azure</span>
                 </button>
@@ -401,8 +402,9 @@
     <div class="d-flex align-items-center justify-content-between">
         <button type="button" class="btn btn-light btn-min-width" id="cancelNewUserYes"
             (click)="closeWindow(true)">Cancel</button>
-        <button *ngIf="!userInLocal && hasPermission('PMUBC')" type="button" class="btn btn-create btn-min-width"
-            id="createNewUserYes" (click)="addUser()" [disabled]="userForm.get('userData').invalid">Add</button>
+        <button *ngIf="!userInLocal && !userInAzureAD && hasPermission('PMUBC')" type="button"
+            class="btn btn-create btn-min-width" id="createNewUserYes" (click)="addUser()"
+            [disabled]="userForm.get('userData').invalid">Add</button>
         <button *ngIf="userInLocal && hasPermission('PMUBC')" type="button" class="btn btn-dark btn-min-width"
             id="importUser" (click)="importUser()">Import</button>
         <button *ngIf="userInAzureAD && hasPermission('PMUBC')" type="button" class="btn btn-dark btn-min-width"
