--- a/src/app/home/control-panel/user/bulk-import/bulk-import.component.scss
+++ b/src/app/home/control-panel/user/bulk-import/bulk-import.component.scss
@@ -34,3 +34,19 @@
         background: $light;
     }
 }
+
+.id {
+    width: 180px;
+}
+
+.timestamp {
+    width: 160px;
+}
+
+.status {
+    width: 90px;
+}
+
+.message {
+    width: 500px;
+}
