--- a/src/app/home/control-panel/user/bulk-import/bulk-import.component.html
+++ b/src/app/home/control-panel/user/bulk-import/bulk-import.component.html
@@ -18,11 +18,14 @@
         <div class="grid-container">
             <div *ngIf="!taskList || taskList.length == 0" class="alert alert-dark">No New Tasks Found</div>
             <div *ngIf="taskList && taskList.length > 0" class="list-group">
-                <div class="list-group-item list-group-item-action d-flex align-items-center justify-content-between hover"
+                <div class="list-group-item list-group-item-action d-flex align-items-center hover"
                     *ngFor="let item of taskList" [routerLink]="item._id">
                     <div class="id">{{item._id}}</div>
                     <div class="timestamp">{{item._metadata.createdAt | date:'dd/MM/yyyy HH:mm'}}</div>
-                    <div class="status">{{item.status}}</div>
+                    <div class="status font-weight-bold"
+                        [ngClass]="{'text-danger':item.status=='Error'}">
+                        {{item.status}}</div>
+                    <div class="message">{{item.message}}</div>
                 </div>
             </div>
         </div>
@@ -35,7 +38,8 @@
     <form>
         <div class="form-group">
             <label for="file">Select File</label>
-            <input class="form-control-file" type="file" id="file" name="file" (change)="onChange($event)" accept=".csv">
+            <input class="form-control-file" type="file" id="file" name="file" (change)="onChange($event)"
+                accept=".csv">
             <small *ngIf="fileAdded" class="form-text text-success">File Selected</small>
             <div class="mt-3">
                 <span class="mr-2 font-13">Please upload a .csv file, check the template for more info.</span>
