--- a/src/app/utils/structure-field-properties/structure-field-properties.component.html
+++ b/src/app/utils/structure-field-properties/structure-field-properties.component.html
@@ -99,8 +99,20 @@
             <span *ngIf="!canEdit">{{formItem.get('properties.fieldLength').value}}</span>
           </div>
         </div>
-        <ng-container *ngIf="showCommonFields && formItem.get('key').value !== '_self'">
-          <div *ngIf="!idField" class="d-flex w-100 ">
+        <ng-container *ngIf="showCommonFields && formItem.get('key').value !== '_self'" class="mb-4">
+          <div *ngIf="!idField && showSecureText(formItem)" class="d-flex w-100 ">
+            <div class="label-width text-secondary">Secure Text</div>
+            <div class="value-width">
+              <select [attr.disabled]="!canEdit ? '' : null" class="form-control" formControlName="password">
+                <option [ngValue]="true">True</option>
+                <option [ngValue]="false">False</option>
+              </select>
+              <!-- <input *ngIf="edit.status" class="form-control" type="text" formControlName="label" id="label">
+              <span *ngIf="!edit.status">{{formItem.get('properties.label').value}}</span> -->
+            </div>
+          </div>
+
+          <div *ngIf="!idField" class="d-flex w-100 mt-4">
             <div class="label-width text-secondary">Custom Label</div>
             <div class="value-width">
               <input *ngIf="edit.status" class="form-control" type="text" formControlName="label" id="label">
