secure text changes

--- a/src/app/utils/field-type/field-type-selector/field-type-selector.component.html
+++ b/src/app/utils/field-type/field-type-selector/field-type-selector.component.html
@@ -36,13 +36,13 @@
           <span class="radio-checkmark"></span>
         </label>
       </div>
-      <div class="d-flex background-hover pl-2 pt-2" (click)="changeDetailedType('password')">
+      <!-- <div class="d-flex background-hover pl-2 pt-2" (click)="changeDetailedType('password')">
         <label class="radio-container">Secure Text 
           <input type="radio" class="mr-2" name="Text" id="password" value="password"
             [checked]="detailedType == 'password'">
           <span class="radio-checkmark"></span>
         </label>
-      </div>
+      </div> -->
       <div class="d-flex background-hover pl-2 pt-2" (click)="changeDetailedType('enum')">
         <label class="radio-container">List of values
           <input type="radio" class="mr-2" name="Text" id="enumvl" value="enum"
