--- a/src/app/utils/structure-field-properties/text-property/text-property.component.html
+++ b/src/app/utils/structure-field-properties/text-property/text-property.component.html
@@ -1,7 +1,7 @@
 <div [formGroup]="form.get('properties')">
 
   <div class="d-flex w-100  flex-column mb-4" *ngIf="form.get('properties.default') && !form.get('properties.longText')?.value &&
-    !form.get('properties.richText')?.value && !form.get('properties.password')?.value && !isLibrary && !isDataFormat">
+    !form.get('properties.richText')?.value && !isLibrary && !isDataFormat">
     <div class="d-flex">
       <div class="label-width text-secondary">Default Value
       </div>
@@ -28,6 +28,41 @@
           <span>{{form.get('properties.default').value}}</span>
         </ng-container>
       </div>
+    </div>
+    <div *ngIf=" showSecureText(form)" class="d-flex w-100 mb-2 mt-4">
+      <div class="label-width text-secondary">Secure</div>
+      <!-- <div class="value-width">
+        <select [attr.disabled]="!canEdit ? '' : null" class="form-control" formControlName="password">
+          <option [ngValue]="true">True</option>
+          <option [ngValue]="false">False</option>
+        </select> -->
+        <div class="value-width position-relative">
+          <ng-container *ngIf="canEdit">
+            <label *ngIf="canEdit" class="switch accent">
+              <input type="checkbox" formControlName="password">
+              <span class="slider"></span>
+              <span class="toggler"></span>
+              <span class="ml-3">{{form.get('properties.password')?.value ? 'Yes' : 'No'}}</span>
+            </label>
+          </ng-container>
+          <ng-container *ngIf="!canEdit">
+            <span class="text d-flex" *ngIf=" form.get('properties.password').value === true">
+              <span
+                class="d-flex align-items-center justify-content-center rounded-circle bg-accent check-circle mr-1">
+                <span class="fa fa-check text-white"></span>
+              </span>
+              <span class="text">Yes</span>
+            </span>
+            <span class="text d-flex" *ngIf="form.get('properties.password').value === false">
+              <span
+                class="d-flex align-items-center justify-content-center rounded-circle bg-secondary check-circle mr-1">
+              </span>
+              <span class="text">No</span>
+            </span>
+          </ng-container>
+        </div>
+       
+      <!-- </div> -->
     </div>
     <div class="d-flex">
       <div class="label-width"></div>
