--- a/src/app/admin/user-list/user-manage/user-info/user-info.component.html
+++ b/src/app/admin/user-list/user-manage/user-info/user-info.component.html
@@ -17,7 +17,7 @@
                         <strong>Basic Details</strong>
                     </label>
                 </div>
-                <div *ngIf="authType !== 'azure'" class="d-flex justify-content-center w-50 text-primary hover"
+                <div class="d-flex justify-content-center w-50 text-primary hover"
                     (click)="editBasicDetails()">
                     <span>Edit</span>
                 </div>
